modified html docs, added start-business and why-palau

--- a/president-message.html
+++ b/president-message.html
@@ -39,6 +39,7 @@
 
         <nav class="navbar navbar-default navbar-static-top">
           <div class="container">
+
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
@@ -46,40 +47,47 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Business in Palau</a>
+              <a class="navbar-brand" href="#">Website Name </a>
             </div>
+
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
+
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Why Palau?<span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="why-palau.html">Overview</a></li>
+                    <li><a href="#">Infrastructure</a></li>
+                    <li><a href="#">Incentives</a></li>
+                  </ul>
+                </li>
+
+                <!-- <li class="active"><a href="#">Business Types</a></li> -->
+                <li><a href="#">Business Types</a></li>
+
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Process<span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="#">Starting a Business</a></li>
+                    <li><a href="#">Foreign Investment</a></li>
+                  </ul>
+                </li>
+
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Resources<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li class="dropdown-submenu">
-                      <a class="test" tabindex="-1" href="#">New dropdown <span class="caret"></span></a>
-                      <ul class="dropdown-menu">
-                        <li><a tabindex="-1" href="#">2nd level dropdown</a></li>
-                        <li><a tabindex="-1" href="#">2nd level dropdown</a></li>
-                        <li class="dropdown-submenu">
-                          <a class="test" href="#">Another dropdown <span class="caret"></span></a>
-                          <ul class="dropdown-menu">
-                            <li><a href="#">3rd level dropdown</a></li>
-                            <li><a href="#">3rd level dropdown</a></li>
-                          </ul>
-                        </li>
-                      </ul>
-                    </li>
+                    <li><a href="#">PCOC</a></li>
+                    <li><a href="#">SBDC</a></li>
+                    <li><a href="#">NDBP</a></li>
                     <li role="separator" class="divider"></li>
-                    <li class="dropdown-header">Nav header</li>
-                    <li><a href="#">Separated link</a></li>
-                    <li><a href="#">One more separated link</a></li>
+                    <li><a href="#">Applications</a></li>
+                    <li><a href="#">All Resources</a></li>
                   </ul>
                 </li>
-                <li class="active"><a href="why-palau">Why Palau?</a></li>
-                <li><a href="#about">Business Types</a></li>
-                <li><a href="#contact">Application Process</a></li>
+
               </ul>
             </div>
+
           </div>
         </nav>
 
@@ -88,6 +96,11 @@
 <!-- Message From The President
 ============================================
 ===-->
+<style>
+    h1, p{
+      margin: 20px 20px 20px 20px;
+    }
+</style>
 <div class="row">
     <div class="col-md-12">
     <h1><br><br>Message From The President</h1>
@@ -95,8 +108,10 @@
 </div>
 </div>
 <div class="row">
-    <div class="col-md-12">
-    <img src=""> <!--insert image-->
+    <div class="col-md-5">
+    <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+    </div>
+    <div class="col-md-7">
      <p>"Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. </p>
      <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. buy some fitz merch at fitz.fanfiber.com. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit." </p>
