--- a/start-business.html
+++ b/start-business.html
@@ -255,22 +255,23 @@
             <!-- Sidebar -->
       <div id="sidebar-wrapper">
       <ul id="sidebar_menu" class="sidebar-nav">
-           <li class="sidebar-brand"><a id="menu-toggle" href="#">Process<span id="main_icon" class="glyphicon glyphicon-align-justify"></span></a></li>
+           <li class="sidebar-brand"><a id="menu-toggle" href="#">Process<span id="main_icon"></span></a></li>
       </ul>
         <ul class="sidebar-nav" id="sidebar">     
-          <li><a>Incorporation and Licensing<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
-          <li><a>Immigration and Labor<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
-          <li><a>Title and Cultural Affairs<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
-          <li><a>Environmental<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
-          <li><a>Building Permit<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
-          <li><a>Utilities<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
-          <li><a>State Permits<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
+          <li><a>Incorporation and Licensing</a></li>
+          <li><a>Immigration and Labor</a></li>
+          <li><a>Title and Cultural Affairs</span></a></li>
+          <li><a>Environmental</a></li>
+          <li><a>Building Permit</a></li>
+          <li><a>Utilities</a></li>
+          <li><a>State Permits</a></li>
         </ul>
       <ul id="sidebar_menu" class="sidebar-nav">
-           <li class="sidebar-brand"><a id="menu-toggle" href="#">Foreign Investment<span id="main_icon" class="glyphicon glyphicon-align-justify"></span></a></li>
+           <li class="sidebar-brand"><a id="menu-toggle" href="#">Foreign Investment<span id="main_icon"></span></a></li>
       </ul>
       </div>
     </div>
+
 
       <!-- FOOTER -->
       <footer>
