modified html docs

--- a/president-message.html
+++ b/president-message.html
@@ -68,7 +68,7 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Process<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Starting a Business</a></li>
+                    <li><a href="start-business.html">Starting a Business</a></li>
                     <li><a href="#">Foreign Investment</a></li>
                   </ul>
                 </li>
@@ -96,16 +96,11 @@
 <!-- Message From The President
 ============================================
 ===-->
-<style>
-    h1, p{
-      margin: 20px 20px 20px 20px;
-    }
-</style>
+<div class="container">
 <div class="row">
     <div class="col-md-12">
     <h1><br><br>Message From The President</h1>
     </div>
-</div>
 </div>
 <div class="row">
     <div class="col-md-5">
@@ -126,7 +121,7 @@
         <br>
         <p class="pull-right"><a href="#">Back to top</a></p>
         <p>&copy; 2017 <a href="http://palauchamber.com/">Palau Chamber of Commerce</a> &middot; <a href="http://palaugov.pw/">Federal Government Website</a>
-        <p class="pull-right"><a href="">Back to Home Page</a></p> <!-- insert url-->
+        <p class="pull-right"><a href="index.html">Back to Home Page</a></p> <!-- insert url-->
       </footer>
 
     </div><!-- /.container -->
