--- a/business-types.html
+++ b/business-types.html
@@ -68,7 +68,7 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Process<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Starting a Business</a></li>
+                    <li><a href="start-business.html">Starting a Business</a></li>
                     <li><a href="#">Foreign Investment</a></li>
                   </ul>
                 </li>
@@ -97,11 +97,7 @@
 <!-- Businesses Good For Palau
 =========================================
 ===-->
-<style>
-    h1, h2, h3, p{
-      margin: 20px 20px 20px 20px;
-    }
-</style>
+<div class="container">
 <div class="row">
     <div class="col-md-12">
     <h1><br><br>Businesses Good For Palau</h1>
@@ -133,7 +129,7 @@
          <!-- FOOTER -->
       <footer>
         <br>
-        <p class="pull-right"><a href="">Learn More About The Process</a></p><!-- insert url -->
+        <p class="pull-right"><a href="start-business.html">Learn More About The Process</a></p><!-- insert url -->
         <p>&copy; 2017 <a href="http://palauchamber.com/">Palau Chamber of Commerce</a> &middot; <a href="http://palaugov.pw/">Federal Government Website</a>
         
       </footer>
