--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Process<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Starting a Business</a></li>
+                    <li><a href="start-business.html">Starting a Business</a></li>
                     <li><a href="#">Foreign Investment</a></li>
                   </ul>
                 </li>
