--- a/start-business.html
+++ b/start-business.html
@@ -93,185 +93,76 @@
 
       </div>
     </div>
-<!-- Sidebar
-==========================
+
+<!--Starting A Business
+=======================================
 ===-->
-<style>
- .row{
-    margin-left:0px;
-    margin-right:0px;
-}
+<div class="container">
+<div class="row">
+    <div class="col-md-3">
+    <style>
+      #sidebar-1 {
+          list-style-type: none;
+          margin: 0;
+          padding: 0;
+          width: 200px;
+          background-color: #f1f1f1;
+      }
 
-#wrapper {
-    padding-left: 70px;
-    transition: all .4s ease 0s;
-    height: 100%
-}
+      li {
+          display: block;
+          color: #000;
+          padding: 8px 16px;
+          text-decoration: none;
+      } 
 
-#sidebar-wrapper {
-    margin-left: -150px;
-    left: 70px;
-    width: 150px;
-    background: #222;
-    position: fixed;
-    height: 100%;
-    z-index: 10000;
-    transition: all .4s ease 0s;
-}
+      li a {
+          display: block;
+          color: #000;
+          padding: 8px 16px;
+          text-decoration: none;
+      }
 
-.sidebar-nav {
-    display: block;
-    float: left;
-    width: 150px;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-#page-content-wrapper {
-    padding-left: 0;
-    margin-left: 0;
-    width: 100%;
-    height: auto;
-}
-#wrapper.active {
-    padding-left: 150px;
-}
-#wrapper.active #sidebar-wrapper {
-    left: 150px;
-}
-
-#page-content-wrapper {
-  width: 100%;
-}
-
-#sidebar_menu li a, .sidebar-nav li a {
-    color: #999;
-    display: block;
-    float: left;
-    text-decoration: none;
-    width: 150px;
-    background: #252525;
-    border-top: 1px solid #373737;
-    border-bottom: 1px solid #1A1A1A;
-    -webkit-transition: background .5s;
-    -moz-transition: background .5s;
-    -o-transition: background .5s;
-    -ms-transition: background .5s;
-    transition: background .5s;
-}
-.sidebar_name {
-    padding-top: 25px;
-    color: #fff;
-    opacity: .7;
-}
-
-.sidebar-nav li {
-  line-height: 40px;
-  text-indent: 20px;
-}
-
-.sidebar-nav li a {
-  color: #999999;
-  display: block;
-  text-decoration: none;
-}
-
-.sidebar-nav li a:hover {
-  color: #fff;
-  background: rgba(255,255,255,0.2);
-  text-decoration: none;
-}
-
-.sidebar-nav li a:active,
-.sidebar-nav li a:focus {
-  text-decoration: none;
-}
-
-.sidebar-nav > .sidebar-brand {
-  height: 65px;
-  line-height: 60px;
-  font-size: 18px;
-}
-
-.sidebar-nav > .sidebar-brand a {
-  color: #999999;
-}
-
-.sidebar-nav > .sidebar-brand a:hover {
-  color: #fff;
-  background: none;
-}
-
-#main_icon
-{
-    float:right;
-   padding-right: 65px;
-   padding-top:20px;
-}
-.sub_icon
-{
-    float:right;
-   padding-right: 65px;
-   padding-top:10px;
-}
-.content-header {
-  height: 65px;
-  line-height: 65px;
-}
-
-.content-header h1 {
-  margin: 0;
-  margin-left: 20px;
-  line-height: 65px;
-  display: inline-block;
-}
-
-@media (max-width:767px) {
-    #wrapper {
-    padding-left: 70px;
-    transition: all .4s ease 0s;
-}
-#sidebar-wrapper {
-    left: 70px;
-}
-#wrapper.active {
-    padding-left: 150px;
-}
-#wrapper.active #sidebar-wrapper {
-    left: 150px;
-    width: 150px;
-    transition: all .4s ease 0s;
-}
-</style>
-<script>
-  $("#menu-toggle").click(function(e) {
-        e.preventDefault();
-        $("#wrapper").toggleClass("active");
-});
-</script>
-<div id="wrapper" class="active">
-      
-      <!-- Sidebar -->
-            <!-- Sidebar -->
-      <div id="sidebar-wrapper">
-      <ul id="sidebar_menu" class="sidebar-nav">
-           <li class="sidebar-brand"><a id="menu-toggle" href="#">Process<span id="main_icon"></span></a></li>
-      </ul>
-        <ul class="sidebar-nav" id="sidebar">     
-          <li><a>Incorporation and Licensing</a></li>
-          <li><a>Immigration and Labor</a></li>
-          <li><a>Title and Cultural Affairs</span></a></li>
-          <li><a>Environmental</a></li>
-          <li><a>Building Permit</a></li>
-          <li><a>Utilities</a></li>
-          <li><a>State Permits</a></li>
-        </ul>
-      <ul id="sidebar_menu" class="sidebar-nav">
-           <li class="sidebar-brand"><a id="menu-toggle" href="#">Foreign Investment<span id="main_icon"></span></a></li>
-      </ul>
-      </div>
+      /* Change the link color on hover */
+      li a:hover {
+          background-color: #555;
+          color: white;
+      }
+    </style>
+    <br>
+    <br>
+    <br>
+    <br>
+    <ul id="sidebar-1">
+        <li>Process</li>
+        <li><a href="">Incorporation and Licensing
+        </a></li>
+        <li><a href="">Immigration and Labor
+        </a></li>
+        <li><a href="">Title and Cultural Affairs
+        </a></li>
+        <li><a href="">Environmental</a></li>
+        <li><a href="">Building Permit</a></li>
+        <li><a href="">Utilities</a></li>
+        <li><a href="">State Permits</a></li>
+        <li id="sidebar-2"><a href="">
+        Foreign Investment</a></li>
+    </ul>
     </div>
-
+    <div class="col-md-9">
+    <br>
+    <br>
+    <br>
+    <br>
+    <h1>Starting A Business</h1>
+    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. don't forget to buy some fitz merch at fitz.fanfiber.com Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+    <p>If you are a foreign investor, you will first need to complete some additional steps before starting the process.
+    <a href="">Click here to learn more</a>
+    </p>
+    <p>The panel on the left will help you navigate the steps.</p>
+    <p><a href="">Begin Process</a></p>
+    </div>
+</div>
 
       <!-- FOOTER -->
       <footer>
