--- a/info-page-template.html
+++ b/info-page-template.html
@@ -46,28 +46,41 @@
             <a class="navbar-brand" href="#">Project name</a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Contact</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li class="dropdown-header">Nav header</li>
-                  <li><a href="#">Separated link</a></li>
-                  <li><a href="#">One more separated link</a></li>
-                </ul>
-              </li>
-            </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li class="active"><a href="./">Default <span class="sr-only">(current)</span></a></li>
-              <li><a href="../navbar-static-top/">Static top</a></li>
-              <li><a href="../navbar-fixed-top/">Fixed top</a></li>
-            </ul>
+
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Why Palau?<span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="why-palau.html">Overview</a></li>
+                    <li><a href="#">Infrastructure</a></li>
+                    <li><a href="#">Incentives</a></li>
+                  </ul>
+                </li>
+
+                <!-- <li class="active"><a href="#">Business Types</a></li> -->
+                <li><a href="#">Business Types</a></li>
+
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Process<span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="#">Starting a Business</a></li>
+                    <li><a href="#">Foreign Investment</a></li>
+                  </ul>
+                </li>
+
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Resources<span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="#">PCOC</a></li>
+                    <li><a href="#">SBDC</a></li>
+                    <li><a href="#">NDBP</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="#">Applications</a></li>
+                    <li><a href="#">All Resources</a></li>
+                  </ul>
+                </li>
+
+              </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
       </nav>
