--- a/business-types.html
+++ b/business-types.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Businesses Good For Palau</title>
+    <title>Website Name</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -17,8 +17,6 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -28,30 +26,27 @@
     <![endif]-->
 
     <!-- Custom styles for this template -->
-    <link href="css/carousel.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
-<!-- NAVBAR
-================================================== -->
+
   <body>
-    <div class="navbar-wrapper">
-      <div class="container">
 
-        <nav class="navbar navbar-default navbar-static-top">
-          <div class="container">
+    <div class="container">
 
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="#">Website Name </a>
-            </div>
-
-            <div id="navbar" class="navbar-collapse collapse">
-              <ul class="nav navbar-nav navbar-right">
+      <!-- Static navbar -->
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Project name</a>
+          </div>
+          <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
 
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Why Palau?<span class="caret"></span></a>
@@ -68,7 +63,7 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Process<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="start-business.html">Starting a Business</a></li>
+                    <li><a href="#">Starting a Business</a></li>
                     <li><a href="#">Foreign Investment</a></li>
                   </ul>
                 </li>
@@ -86,21 +81,15 @@
                 </li>
 
               </ul>
-            </div>
+          </div><!--/.nav-collapse -->
+        </div><!--/.container-fluid -->
+      </nav>
 
-          </div>
-        </nav>
-
-      </div>
-    </div>
-
-<!-- Businesses Good For Palau
-=========================================
-===-->
+      <!-- Main content area -->
 <div class="container">
 <div class="row">
     <div class="col-md-12">
-    <h1><br><br>Businesses Good For Palau</h1>
+    <h1>Businesses Good For Palau</h1>
     </div>
 </div>
 <div class="row">
@@ -112,6 +101,7 @@
     <div class="col-md-12">
     <h2>A Random Subtitle</h2>
     </div>
+</div>
 <div class="row">
     <div class="col-md-5">
     <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
@@ -126,15 +116,9 @@
     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. great shirts. great deals. great service. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
     </div>
 </div>
-         <!-- FOOTER -->
-      <footer>
-        <br>
-        <p class="pull-right"><a href="start-business.html">Learn More About The Process</a></p><!-- insert url -->
-        <p>&copy; 2017 <a href="http://palauchamber.com/">Palau Chamber of Commerce</a> &middot; <a href="http://palaugov.pw/">Federal Government Website</a>
-        
-      </footer>
+      <!-- End main content area -->
 
-    </div><!-- /.container -->
+    </div> <!-- /container -->
 
 
     <!-- Bootstrap core JavaScript
@@ -150,3 +134,4 @@
     <script src="js/script.js"></script>
   </body>
 </html>
+
