--- a/president-message.html
+++ b/president-message.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Message From The President</title>
+    <title>Website Name</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -17,8 +17,6 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -28,30 +26,27 @@
     <![endif]-->
 
     <!-- Custom styles for this template -->
-    <link href="css/carousel.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
-  <!-- NAVBAR
-================================================== -->
+
   <body>
-    <div class="navbar-wrapper">
-      <div class="container">
 
-        <nav class="navbar navbar-default navbar-static-top">
-          <div class="container">
+    <div class="container">
 
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="#">Website Name </a>
-            </div>
-
-            <div id="navbar" class="navbar-collapse collapse">
-              <ul class="nav navbar-nav navbar-right">
+      <!-- Static navbar -->
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Project name</a>
+          </div>
+          <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
 
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Why Palau?<span class="caret"></span></a>
@@ -68,7 +63,7 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Process<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="start-business.html">Starting a Business</a></li>
+                    <li><a href="#">Starting a Business</a></li>
                     <li><a href="#">Foreign Investment</a></li>
                   </ul>
                 </li>
@@ -86,20 +81,15 @@
                 </li>
 
               </ul>
-            </div>
+          </div><!--/.nav-collapse -->
+        </div><!--/.container-fluid -->
+      </nav>
 
-          </div>
-        </nav>
-
-      </div>
-    </div>
-<!-- Message From The President
-============================================
-===-->
+      <!-- Main content area -->
 <div class="container">
 <div class="row">
     <div class="col-md-12">
-    <h1><br><br>Message From The President</h1>
+    <h1>Message From The President</h1>
     </div>
 </div>
 <div class="row">
@@ -114,17 +104,10 @@
      Republic of Palau</p>
     </div>
 </div>
+      <!-- End main content area -->
 
- <!-- FOOTER -->
-      <footer>
-        <br>
-        <br>
-        <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017 <a href="http://palauchamber.com/">Palau Chamber of Commerce</a> &middot; <a href="http://palaugov.pw/">Federal Government Website</a>
-        <p class="pull-right"><a href="index.html">Back to Home Page</a></p> <!-- insert url-->
-      </footer>
+    </div> <!-- /container -->
 
-    </div><!-- /.container -->
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
@@ -139,3 +122,4 @@
     <script src="js/script.js"></script>
   </body>
 </html>
+
