--- a/start-business.html
+++ b/start-business.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Starting A Business</title>
+    <title>Website Name</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -17,8 +17,6 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -28,30 +26,27 @@
     <![endif]-->
 
     <!-- Custom styles for this template -->
-    <link href="css/carousel.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
-<!-- NAVBAR
-================================================== -->
+
   <body>
-    <div class="navbar-wrapper">
-      <div class="container">
 
-        <nav class="navbar navbar-default navbar-static-top">
-          <div class="container">
+    <div class="container">
 
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="#">Website Name </a>
-            </div>
-
-            <div id="navbar" class="navbar-collapse collapse">
-              <ul class="nav navbar-nav navbar-right">
+      <!-- Static navbar -->
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Project name</a>
+          </div>
+          <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
 
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Why Palau?<span class="caret"></span></a>
@@ -63,7 +58,7 @@
                 </li>
 
                 <!-- <li class="active"><a href="#">Business Types</a></li> -->
-                <li><a href="business-types.html">Business Types</a></li>
+                <li><a href="#">Business Types</a></li>
 
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Process<span class="caret"></span></a>
@@ -86,74 +81,17 @@
                 </li>
 
               </ul>
-            </div>
+          </div><!--/.nav-collapse -->
+        </div><!--/.container-fluid -->
+      </nav>
 
-          </div>
-        </nav>
-
-      </div>
-    </div>
-
-<!--Starting A Business
-=======================================
-===-->
+      <!-- Main content area -->
 <div class="container">
 <div class="row">
     <div class="col-md-3">
-    <style>
-      #sidebar-1 {
-          list-style-type: none;
-          margin: 0;
-          padding: 0;
-          width: 200px;
-          background-color: #f1f1f1;
-      }
-
-      li {
-          display: block;
-          color: #000;
-          padding: 8px 16px;
-          text-decoration: none;
-      } 
-
-      li a {
-          display: block;
-          color: #000;
-          padding: 8px 16px;
-          text-decoration: none;
-      }
-
-      /* Change the link color on hover */
-      li a:hover {
-          background-color: #555;
-          color: white;
-      }
-    </style>
-    <br>
-    <br>
-    <br>
-    <br>
-    <ul id="sidebar-1">
-        <li>Process</li>
-        <li><a href="">Incorporation and Licensing
-        </a></li>
-        <li><a href="">Immigration and Labor
-        </a></li>
-        <li><a href="">Title and Cultural Affairs
-        </a></li>
-        <li><a href="">Environmental</a></li>
-        <li><a href="">Building Permit</a></li>
-        <li><a href="">Utilities</a></li>
-        <li><a href="">State Permits</a></li>
-        <li id="sidebar-2"><a href="">
-        Foreign Investment</a></li>
-    </ul>
+   
     </div>
     <div class="col-md-9">
-    <br>
-    <br>
-    <br>
-    <br>
     <h1>Starting A Business</h1>
     <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. don't forget to buy some fitz merch at fitz.fanfiber.com Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
     <p>If you are a foreign investor, you will first need to complete some additional steps before starting the process.
@@ -163,13 +101,9 @@
     <p><a href="">Begin Process</a></p>
     </div>
 </div>
+      <!-- End main content area -->
 
-      <!-- FOOTER -->
-      <footer>
-        <p class="pull-right">&copy; 2017 <a href="http://palauchamber.com/" target="_blank">Palau Chamber of Commerce</a> &middot; <a href="http://palaugov.pw/" target="_blank">Federal Government Website</a>
-      </footer>
-
-    </div><!-- /.container -->
+    </div> <!-- /container -->
 
 
     <!-- Bootstrap core JavaScript
@@ -185,3 +119,4 @@
     <script src="js/script.js"></script>
   </body>
 </html>
+
