added/modified html docs

--- a/incorporation-licensing.html
+++ b/incorporation-licensing.html
@@ -86,30 +86,67 @@
       </nav>
 
       <!-- Main content area -->
-<div class="container">
-<div class="row">
-    <div class="col-md-3">
-    
-    </div>
-    <div class="col-md-9">
-    <h1>Incorporation and Licensing</h1>
-    <h2>Requirements</h2>
-    <p>You or your designated agent must:</p>
-    <ol = "1">
-        <li>Review existing business names with the Corporate Registrar, Office of the Attorney General, and reserve your proposed business name.</li>
-        <li>Arrange for your complany deeds to be notarized in Palau.</li>
-        <li>Pay the registration fee to the Bureau of the Treasury.</li>
-        <li>Register your company with the Corporate Registrar and the Office of the Attorney General.</li>
-        <li>Submit an application for a Federal business license.</li>
-    </ol>
-    <h3>Materials</h3>
-    <p>Local requirements and contact information for state authorities can be found on the 
-    <a href="">State Licensing and Zoning Requirements</a> page.
-    <h4>Fees</h4>
-    <ul>
-        <li>The corporate registration fee is US $random</li>
-    </div>
-</div>
+      <div class="row">
+        <div class="col-md-3">
+          <table class="table process-table">
+            <tbody>
+              <tr>
+                <td>
+                  Incorporation and Licensing
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Immigration and Labor
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Title and Cultural Affairs
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Environmental
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Building Permit
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Utilities
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="col-md-9">
+          <h1>Incorporation and Licensing</h1>
+          <h2>Requirements</h2>
+          <p>You or your designated agent must:</p>
+          <ol = "1">
+              <li>Review existing business names with the Corporate Registrar, Office of the Attorney General, and reserve your proposed business name.</li>
+              <li>Arrange for your complany deeds to be notarized in Palau.</li>
+              <li>Pay the registration fee to the Bureau of the Treasury.</li>
+              <li>Register your company with the Corporate Registrar and the Office of the Attorney General.</li>
+              <li>Submit an application for a Federal business license.</li>
+          </ol>
+          <h2>Materials</h2>
+          <p>Local requirements and contact information for state authorities can be found on the 
+          <a href="">State Licensing and Zoning Requirements</a> page.
+          <h2>Fees</h2>
+          <ul>
+              <li>The corporate registration fee is US $XX</li>
+              <li>The application fee for a Federal business license is US$XX.</li>
+              <li>Application fees for state business licenses vary depending on the State and the types and number of licenses needed. Visit the
+              <a href="">State process page</a>
+              for more details.</li>
+          </ul>    
+        </div>
+      </div>
       <!-- End main content area -->
 
     </div> <!-- /container -->
