--- a/immigration-labor.html
+++ b/immigration-labor.html
@@ -86,23 +86,69 @@
       </nav>
 
       <!-- Main content area -->
-<div class="row">
-    <div class="col-md-12">
-    <h1>Message From The President</h1>
-    </div>
-</div>
-<div class="row">
-    <div class="col-md-5">
-    <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-    </div>
-    <div class="col-md-7">
-     <p>"Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. </p>
-     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. buy some fitz merch at fitz.fanfiber.com. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-     <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit." </p>
-     <p class="pull-right"> -Tommy Remengesau, <br>
-     Republic of Palau</p>
-    </div>
-</div>
+      <div class="row">
+        <div class="col-md-3">
+          <table class="table process-table">
+            <tbody>
+              <tr>
+                <td>
+                  Incorporation and Licensing
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Immigration and Labor
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Title and Cultural Affairs
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Environmental
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Building Permit
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Utilities
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="col-md-9">
+          <h1>Immigration and Labor</h1>
+          <p>All businesses must comply with Palauan immigration and labor regulations.
+          <h2>Requirements</h2>
+          <p>You or your designated agent must:
+          <ol ="1">
+            <li>Apply for an investor's travel visa from the Department of Immigration, if needed.</li>
+            <li>Register your company's Palauan employees with the Palauan Social Security Administration and obtain an employer identification number (EIN).
+            <li>Completer an application with the Bureau of Labor to receive approval to employ non-Palauan workers, if needed.
+            </li>
+          </ol>
+          <h2>Materials</h2>
+          <p>Information required to register your company's Palauan employees with the Social Security Administration includes:
+          <ul>
+            <li>Name</li>
+            <li>Address</li>
+            <li>Individual Social Security Number
+            </li>
+          </ul>
+          <h2>Fees</h2>
+          <ul>
+            <li>The visa application fee is US $XX.
+            </li>
+            <li>The Social Security registration fee is US $XX.</li>
+        </div>
+      </div>
       <!-- End main content area -->
 
     </div> <!-- /container -->
