--- a/ndbp.html
+++ b/ndbp.html
@@ -86,23 +86,55 @@
       </nav>
 
       <!-- Main content area -->
-<div class="row">
-    <div class="col-md-12">
-    <h1>Message From The President</h1>
-    </div>
-</div>
-<div class="row">
-    <div class="col-md-5">
-    <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-    </div>
-    <div class="col-md-7">
-     <p>"Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. </p>
-     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. buy some fitz merch at fitz.fanfiber.com. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-     <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit." </p>
-     <p class="pull-right"> -Tommy Remengesau, <br>
-     Republic of Palau</p>
-    </div>
-</div>
+      <div class="row">
+        <div class="col-md-3">
+          <table class="table process-table">
+            <tbody>
+              <tr>
+                <td>
+                  Palau Chamber of Commerce
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  National Development Bank of Palau
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Small Business Development Center
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Another Resource
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Another Resource
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  All Applications
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="col-md-9">
+          <h1>
+            National Development Bank of Palau
+          </h1>
+          <p>
+            Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. don't forget to buy some fitz merch at fitz.fanfiber.com Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+            <a href="">
+            Click here to visit the National Development Bank of Palau website.
+            </a>
+          </p>
+        </div>
+      </div>
       <!-- End main content area -->
 
     </div> <!-- /container -->
