--- a/start-business.html
+++ b/start-business.html
@@ -86,21 +86,53 @@
       </nav>
 
       <!-- Main content area -->
-<div class="container">
-<div class="row">
-    <div class="col-md-3">
-   
-    </div>
-    <div class="col-md-9">
-    <h1>Starting A Business</h1>
-    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. don't forget to buy some fitz merch at fitz.fanfiber.com Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-    <p>If you are a foreign investor, you will first need to complete some additional steps before starting the process.
-    <a href="">Click here to learn more</a>
-    </p>
-    <p>The panel on the left will help you navigate the steps.</p>
-    <p><a href="">Begin Process</a></p>
-    </div>
-</div>
+      <div class="row">
+        <div class="col-md-3">
+          <table class="table process-table">
+            <tbody>
+              <tr>
+                <td>
+                  Incorporation and Licensing
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Immigration and Labor
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Title and Cultural Affairs
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Environmental
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Building Permit
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Utilities
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="col-md-9">
+          <h1>Starting A Business</h1>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. don't forget to buy some fitz merch at fitz.fanfiber.com Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+          <p>If you are a foreign investor, you will first need to complete some additional steps before starting the process.
+          <a href="">Click here to learn more</a>
+          </p>
+          <p>The panel on the left will help you navigate the steps.</p>
+          <p><a href="">Begin Process</a></p>
+        </div>
+      </div>
       <!-- End main content area -->
 
     </div> <!-- /container -->
